# alpha-zero-learning

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
azl/: __init__.py  evaluate.py  mcts.py  metrics.py  network.py  replay_buffer.py  selfplay.py  solvers.py  trainer.py
azl/foundations/: __init__.py  blocks.py  data.py  models.py  train_loop.py
azl/games/: __init__.py  base.py  connect4.py  dice_race.py  tictactoe.py
notebooks/: A1_pytorch_refresher.ipynb  A2_resnet_mnist.ipynb  A3_rnn_sequential_mnist.ipynb  A4_two_headed_net.ipynb  B1_mcts_from_scratch.ipynb  B2_alphazero_tictactoe.ipynb  B3_diagnostics_dynamics.ipynb  B4_connect4_resnet.ipynb  B5_chance_nodes_dice.ipynb  B6_supervised_pretraining.ipynb  B7_map_to_raccoon.ipynb
scripts/: evaluate.py  pretrain.py  train_alphazero.py  train_supervised.py
tests/: test_games.py  test_mcts.py  test_network.py  test_selfplay_replay.py  test_solvers.py
