[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "azl"
version = "0.1.0"
description = "alpha-zero-learning: hands-on toy examples for AlphaZero and the deep-learning foundations behind the raccoon backgammon AI"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyterlab",
    "ipykernel",
]

[tool.setuptools.packages.find]
include = ["azl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
